Added resource controller for technical systems including policy, requests and API swagger documentation
