# app/Http/Requests/TechnicalSystem/UpdateTechnicalSystemRequest.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Requests\TechnicalSystem;
+
+use App\Models\User;
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateTechnicalSystemRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return (auth()->user()->role == User::SUPER_ADMIN_ROLE);
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'code' => 'nullable|string|max:255',
+            'name' => 'required|string',
+            'description' => 'nullable|string',
+            'parent_technical_system_id' => 'integer'
+        ];
+    }
+}
